--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,6 +2,11 @@
 # GitHub Actions workflow for building Android APK with Buildozer
 # =============================================================================
 # 【重要声明】本配置文件仅属于「teleprompter」仓库
+# 
+# 【修复记录】针对以下报错的彻底修复：
+# - aapt not found
+# - the license is not accepted  
+# - Android SDK Build-tools 34.1 未被安装
 # =============================================================================
 name: Build Android APK
 
@@ -10,7 +15,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # 允许手动触发
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,8 +25,6 @@ jobs:
       ANDROID_HOME: /usr/local/lib/android/sdk
       ANDROID_NDK_VERSION: 25.2.9519653
       ANDROID_NDK_HOME: /usr/local/lib/android/sdk/ndk/25.2.9519653
-      ANDROID_BUILD_TOOLS_VERSION: 33.0.2
-      ANDROID_PLATFORM_VERSION: 33
 
     steps:
       # =========================================
@@ -31,8 +34,7 @@ jobs:
         uses: actions/checkout@v4
 
       # =========================================
-      # 步骤2：设置JDK 17（Android打包必需）
-      # 【修复问题2】添加缺失的Java环境
+      # 步骤2：设置JDK 17
       # =========================================
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -41,8 +43,7 @@ jobs:
           java-version: '17'
 
       # =========================================
-      # 步骤3：设置Android SDK（仅接受许可）
-      # 【修复问题1】移除无效参数，仅保留accept-android-sdk-licenses
+      # 步骤3：设置Android SDK基础环境
       # =========================================
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
@@ -50,50 +51,126 @@ jobs:
           accept-android-sdk-licenses: true
 
       # =========================================
-      # 步骤4：手动安装SDK组件
-      # 【修复问题4】用sdkmanager命令手动安装所有组件
+      # 步骤4：【关键修复①】写入完整的SDK许可文件
+      # 修复问题：the license is not accepted
+      # 说明：写入所有已知的许可hash，覆盖所有SDK版本
       # =========================================
-      - name: Install Android SDK Components
+      - name: Write All SDK License Files
         run: |
-          echo "📦 Installing Android SDK components..."
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools"
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-$ANDROID_PLATFORM_VERSION"
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "ndk;$ANDROID_NDK_VERSION"
-          echo "✅ SDK components installed!"
-
-      # =========================================
-      # 步骤5：手动写入SDK许可文件
-      # 【修复问题5】双重保障，确保许可文件存在
-      # =========================================
-      - name: Write SDK License Files
-        run: |
-          echo "📜 Writing SDK license files..."
+          echo "📜 Writing comprehensive SDK license files..."
           mkdir -p $ANDROID_SDK_ROOT/licenses
-          echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > $ANDROID_SDK_ROOT/licenses/android-sdk-license
-          echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> $ANDROID_SDK_ROOT/licenses/android-sdk-license
-          echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" >> $ANDROID_SDK_ROOT/licenses/android-sdk-license
-          echo "84831b9409646a918e30573bab4c9c91346d8abd" > $ANDROID_SDK_ROOT/licenses/android-sdk-preview-license
-          echo "✅ License files written!"
+          
+          # android-sdk-license（包含所有已知hash）
+          cat > $ANDROID_SDK_ROOT/licenses/android-sdk-license << 'EOF'
+          8933bad161af4178b1185d1a37fbf41ea5269c55
+          d56f5187479451eabf01fb78af6dfcb131a6481e
+          24333f8a63b6825ea9c5514f83c2829b004d1fee
+          e6b7c2ab7fa2298c15165e9583d0acf0b04a2232
+          EOF
+          
+          # android-sdk-preview-license
+          cat > $ANDROID_SDK_ROOT/licenses/android-sdk-preview-license << 'EOF'
+          84831b9409646a918e30573bab4c9c91346d8abd
+          504667f4c0de7af1a06de9f4b1727b84351f2910
+          EOF
+          
+          # android-googletv-license
+          cat > $ANDROID_SDK_ROOT/licenses/android-googletv-license << 'EOF'
+          601085b94cd77f0b54ff86406957099ebe79c4d6
+          EOF
+          
+          # android-sdk-arm-dbt-license
+          cat > $ANDROID_SDK_ROOT/licenses/android-sdk-arm-dbt-license << 'EOF'
+          859f317696f67ef3d7f30a50a5560e7834b43903
+          EOF
+          
+          # google-gdk-license
+          cat > $ANDROID_SDK_ROOT/licenses/google-gdk-license << 'EOF'
+          33b6a2b64607f11b759f320ef9dff4ae5c47d97a
+          EOF
+          
+          # intel-android-extra-license
+          cat > $ANDROID_SDK_ROOT/licenses/intel-android-extra-license << 'EOF'
+          d975f751698a77b662f1254ddbeed3901e976f5a
+          EOF
+          
+          # mips-android-sysimage-license
+          cat > $ANDROID_SDK_ROOT/licenses/mips-android-sysimage-license << 'EOF'
+          e9acab5b5fbb560a72cfaecce8946896ff6aab9d
+          EOF
+          
+          echo "✅ All license files written!"
+          echo "📋 License directory:"
+          ls -la $ANDROID_SDK_ROOT/licenses/
 
       # =========================================
-      # 步骤6：将Build Tools加入PATH
+      # 步骤5：【关键修复②】安装所有可能需要的build-tools版本
+      # 修复问题：aapt not found, Build-tools 34.1 未被安装
+      # 说明：安装多个版本确保覆盖Buildozer的所有需求
       # =========================================
-      - name: Add Build Tools to PATH
+      - name: Install Android SDK Components (All Versions)
         run: |
-          echo "$ANDROID_SDK_ROOT/build-tools/$ANDROID_BUILD_TOOLS_VERSION" >> $GITHUB_PATH
+          echo "📦 Installing Android SDK components (multiple versions)..."
+          
+          # 再次接受许可（确保生效）
+          yes | sdkmanager --licenses || true
+          
+          # 安装platform-tools
+          sdkmanager "platform-tools"
+          
+          # 安装platforms
+          sdkmanager "platforms;android-34"
+          sdkmanager "platforms;android-33"
+          
+          # 【关键】安装多个版本的build-tools，确保覆盖Buildozer需求
+          sdkmanager "build-tools;34.0.0"
+          sdkmanager "build-tools;33.0.2"
+          sdkmanager "build-tools;33.0.0"
+          
+          # 安装NDK
+          sdkmanager "ndk;$ANDROID_NDK_VERSION"
+          
+          # 安装cmake（可能需要）
+          sdkmanager "cmake;3.22.1"
+          
+          echo "✅ All SDK components installed!"
+
+      # =========================================
+      # 步骤6：【关键修复③】将所有build-tools路径加入PATH
+      # 修复问题：aapt not found
+      # =========================================
+      - name: Add All Build Tools to PATH
+        run: |
+          echo "🔧 Adding build-tools to PATH..."
+          echo "$ANDROID_SDK_ROOT/build-tools/34.0.0" >> $GITHUB_PATH
+          echo "$ANDROID_SDK_ROOT/build-tools/33.0.2" >> $GITHUB_PATH
+          echo "$ANDROID_SDK_ROOT/build-tools/33.0.0" >> $GITHUB_PATH
           echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          echo "✅ PATH updated!"
 
       # =========================================
-      # 步骤7：验证SDK安装
+      # 步骤7：【关键修复④】验证aapt存在
+      # 修复问题：确保aapt可被找到
       # =========================================
-      - name: Verify Android SDK
+      - name: Verify aapt Installation
         run: |
-          echo "🔍 Verifying SDK installation..."
-          echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
-          ls -la $ANDROID_SDK_ROOT/build-tools/$ANDROID_BUILD_TOOLS_VERSION/aapt || echo "aapt not found!"
-          ls -la $ANDROID_SDK_ROOT/ndk/$ANDROID_NDK_VERSION/ || echo "NDK not found!"
-          echo "✅ Verification complete!"
+          echo "🔍 Verifying aapt installation..."
+          echo ""
+          echo "=== Checking build-tools directories ==="
+          ls -la $ANDROID_SDK_ROOT/build-tools/ || echo "build-tools dir not found"
+          echo ""
+          echo "=== Checking aapt in 34.0.0 ==="
+          ls -la $ANDROID_SDK_ROOT/build-tools/34.0.0/aapt 2>/dev/null && echo "✅ aapt found in 34.0.0" || echo "❌ aapt NOT found in 34.0.0"
+          echo ""
+          echo "=== Checking aapt in 33.0.2 ==="
+          ls -la $ANDROID_SDK_ROOT/build-tools/33.0.2/aapt 2>/dev/null && echo "✅ aapt found in 33.0.2" || echo "❌ aapt NOT found in 33.0.2"
+          echo ""
+          echo "=== Checking NDK ==="
+          ls -la $ANDROID_SDK_ROOT/ndk/$ANDROID_NDK_VERSION/ 2>/dev/null | head -5 || echo "❌ NDK not found"
+          echo ""
+          echo "=== Which aapt ==="
+          which aapt || echo "aapt not in PATH yet (will be available in next step)"
 
       # =========================================
       # 步骤8：设置Python环境
@@ -105,7 +182,6 @@ jobs:
 
       # =========================================
       # 步骤9：安装系统依赖
-      # 【修复问题3】添加Buildozer编译所需的所有系统库
       # =========================================
       - name: Install System Dependencies
         run: |
@@ -138,7 +214,9 @@ jobs:
             pkg-config \
             wget \
             lld \
-            ccache
+            ccache \
+            cmake \
+            ninja-build
 
       # =========================================
       # 步骤10：安装Python依赖
@@ -146,11 +224,10 @@ jobs:
       - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install buildozer==1.5.0 cython==0.29.33 kivy==2.2.1
+          pip install buildozer==1.5.0 cython==0.29.33 kivy==2.2.1 virtualenv
 
       # =========================================
       # 步骤11：下载Vosk模型
-      # 【修复问题7】添加语音模型下载
       # =========================================
       - name: Download Vosk Model
         run: |
@@ -160,45 +237,63 @@ jobs:
           echo "✅ Vosk model ready!"
 
       # =========================================
-      # 步骤12：配置Buildozer缓存
+      # 步骤12：【关键修复⑤】彻底清理Buildozer缓存
+      # 修复问题：确保Buildozer使用系统SDK
+      # 说明：删除整个.buildozer目录，强制重新构建
       # =========================================
-      - name: Cache Buildozer
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.buildozer
-            .buildozer
-          key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
-          restore-keys: |
-            ${{ runner.os }}-buildozer-
+      - name: Clean All Buildozer Cache
+        run: |
+          echo "🧹 Completely cleaning Buildozer cache..."
+          rm -rf ~/.buildozer 2>/dev/null || true
+          rm -rf .buildozer 2>/dev/null || true
+          echo "✅ Buildozer cache completely cleaned!"
 
       # =========================================
-      # 步骤13：清理Buildozer私有SDK
-      # 【修复问题6】确保使用系统SDK而非缓存的私有SDK
+      # 步骤13：创建符号链接确保aapt可被找到
+      # 修复问题：某些情况下Buildozer找不到aapt
       # =========================================
-      - name: Clean Buildozer Private SDK
+      - name: Create aapt Symlinks
         run: |
-          echo "🧹 Cleaning cached private SDK..."
-          rm -rf ~/.buildozer/android/platform/android-sdk 2>/dev/null || true
-          rm -rf ~/.buildozer/android/platform/android-ndk* 2>/dev/null || true
-          echo "✅ Private SDK cleaned!"
+          echo "🔗 Creating aapt symlinks..."
+          sudo ln -sf $ANDROID_SDK_ROOT/build-tools/34.0.0/aapt /usr/local/bin/aapt 2>/dev/null || true
+          sudo ln -sf $ANDROID_SDK_ROOT/build-tools/34.0.0/aapt2 /usr/local/bin/aapt2 2>/dev/null || true
+          sudo ln -sf $ANDROID_SDK_ROOT/build-tools/34.0.0/zipalign /usr/local/bin/zipalign 2>/dev/null || true
+          sudo ln -sf $ANDROID_SDK_ROOT/build-tools/34.0.0/apksigner /usr/local/bin/apksigner 2>/dev/null || true
+          echo "✅ Symlinks created!"
+          which aapt && echo "aapt is now accessible!"
 
       # =========================================
       # 步骤14：构建APK
+      # 说明：传入所有必要的环境变量
       # =========================================
       - name: Build APK with Buildozer
         run: |
           echo "🔨 Building Android APK..."
+          echo "================================================"
+          echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
+          echo "ANDROID_NDK_HOME: $ANDROID_NDK_HOME"
+          echo "aapt location: $(which aapt || echo 'checking PATH...')"
+          echo "================================================"
+          echo ""
           echo "This may take 15-30 minutes on first build..."
+          echo ""
+          
+          # 构建APK
           buildozer -v android debug
         env:
           BUILDOZER_WARN_ON_ROOT: 0
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
+          ANDROID_NDK_HOME: ${{ env.ANDROID_NDK_HOME }}
           ANDROIDSDK: ${{ env.ANDROID_SDK_ROOT }}
           ANDROIDNDK: ${{ env.ANDROID_NDK_HOME }}
+          ANDROIDAPI: "33"
+          ANDROIDMINAPI: "24"
+          # 强制指定build-tools路径
+          PATH: ${{ env.ANDROID_SDK_ROOT }}/build-tools/34.0.0:${{ env.ANDROID_SDK_ROOT }}/build-tools/33.0.2:${{ env.ANDROID_SDK_ROOT }}/platform-tools:/usr/local/bin:/usr/bin:/bin
 
       # =========================================
       # 步骤15：上传APK产物
-      # 【修复问题8】添加if-no-files-found明确报错
       # =========================================
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
@@ -214,10 +309,14 @@ jobs:
       - name: Build Summary
         if: always()
         run: |
-          echo "## Build Result" >> $GITHUB_STEP_SUMMARY
+          echo "## 📱 Build Result" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
           if ls bin/*.apk 1>/dev/null 2>&1; then
             echo "### ✅ APK Generated Successfully!" >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
             ls -lh bin/*.apk >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
           else
             echo "### ❌ APK Generation Failed" >> $GITHUB_STEP_SUMMARY
+            echo "Check the build logs for details." >> $GITHUB_STEP_SUMMARY
           fi
